<resources>
    <string name="app_name">MyAthletes</string>

    <string name="workout">workout</string>
    <string name="link">link</string>
    <string name="description">description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bench_press">Bench Press</string>
    <string name="button">Button</string>
    <string name="treadmill">treadmill</string>


    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>

    <string name="currentLiftLabel">Current Lift</string>
    <string name="currentBpmLabel">Current BPM</string>
    <string name="targetBpmLabel">Target BPM</string>
    <string name="nextLiftLabel">Next Lift</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="decimal">.</string>
    <string name="clear">C</string>

    <string name="calculate">Calculate</string>


</resources>